...
        }
        .navigationViewStyle(.stack)
        .uqpayPaymentSheet(
            isPresented: $isShowingPaymentSheet,
            sheet: paymentHandler.paymentSheet
        )
        .alert("Payment", isPresented: $paymentHandler.showAlert) {
            Button("OK") { viewModel.reset() }
        } message: {
            Text(paymentHandler.alertMessage)
        }
    }

...
